Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb: Output Gamma*ValenciavU in SPHERICAL basis

--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -724,7 +724,18 @@
     "            file.write(\"// Parameters needed to ensure velocity computations are robust:\\n\")\n",
     "            file.write(\"#define GAMMA_SPEED_LIMIT 20\\n\")\n",
     "            file.write(\"#define TINYDOUBLE        1e-100\\n\\n\")\n",
+    "    compute_xx0xx1xx2 = \"\"\n",
+    "    if \"SPHERICAL\" in gf_interp_list[which_InterpCounter].gf_description:\n",
+    "        compute_xx0xx1xx2 = \"\"\"\n",
+    "// ONLY NEEDED/USED IF CONVERTING TO SPHERICAL BASIS:\n",
+    "const double Cartx = x[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] + x_center;\n",
+    "const double Carty = y[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] + y_center;\n",
+    "const double Cartz = z[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] + z_center;\n",
     "\n",
+    "const double xx0 = sqrt(Cartx*Cartx + Carty*Carty + Cartz*Cartz);\n",
+    "const double xx1 = acos(Cartz/xx0);\n",
+    "const double xx2 = atan2(Carty,Cartx);\\n\n",
+    "\"\"\"\n",
     "    with open(filename, output_type) as file:\n",
     "        file.write(\"if(*InterpCounter == \"+str(which_InterpCounter)+\") {\\n\")\n",
     "        file.write(\"    // Interpolating: \"+gf_interp_list[which_InterpCounter].gf_description+\"\\n\")\n",
@@ -735,17 +746,7 @@
     "                            \"cctk_lsh[0]-cctk_nghostzones[0]\"],\\\n",
     "                           [\"1\",\"1\",\"1\"],\\\n",
     "                           [\"#pragma omp parallel for\",\"\",\"\"],\"   \",\n",
-    "                           \"\"\"\n",
-    "/* ONLY NEEDED/USED IF CONVERTING TO SPHERICAL BASIS:\n",
-    "const double Cartx = x[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] + x_center;\n",
-    "const double Carty = y[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] + y_center;\n",
-    "const double Cartz = z[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] + z_center;\n",
-    "\n",
-    "const double xx0 = sqrt(Cartx*Cartx + Carty*Carty + Cartz*Cartz);\n",
-    "const double xx1 = acos(Cartz/xx0);\n",
-    "const double xx2 = atan2(Carty,Cartx);\\n\n",
-    "*/ \\n\n",
-    "\"\"\"+kernel))\n",
+    "                           compute_xx0xx1xx2+kernel))\n",
     "        file.write(\"}\\n\")\n",
     "    # If successful, return incremented which_InterpCounter:\n",
     "    return which_InterpCounter+1"
@@ -894,11 +895,65 @@
     "    ValenciavU[i] = (1/alpha * (Ge.rescaledvU[i] + betaU[i])) # simplify?\n",
     "\n",
     "for i in range(DIM):\n",
-    "    Gamma_times_ValenciavU[i] = Gamma*ValenciavU[i]\n",
-    "    gf_interp_list.append(gf_interp(\"Lorentz factor, times Valencia vU\"+str(i)))\n",
-    "    interp_expr = Gamma_times_ValenciavU[i]\n",
-    "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)\n",
+    "    Gamma_times_ValenciavU[i] = Gamma*ValenciavU[i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we'll basis transform $W^i = \\Gamma v_{\\rm n}^i$ from Cartesian to the spherical basis:\n",
     "\n",
+    "Within [`reference_metric.py`](../edit/reference_metric.py), the `compute_Jacobian_and_inverseJacobian_tofrom_Cartesian()` function defines Jacobians relative to the center of the source (reference metric) grid, at a point $x^j_{\\rm src}=$(`xx0,xx1,xx2`)${}_{\\rm src}$ on the source grid:\n",
+    "$$\n",
+    "{\\rm Jac\\_dUCart\\_dDsrcUD[i][j]} = \\frac{\\partial x^i_{\\rm Cart}}{\\partial x^j_{\\rm src}},\n",
+    "$$\n",
+    "\n",
+    "via exact differentiation (courtesy SymPy), and the inverse Jacobian\n",
+    "$$\n",
+    "{\\rm Jac\\_dUsrc\\_dDCartUD[i][j]} = \\frac{\\partial x^i_{\\rm src}}{\\partial x^j_{\\rm Cart}},\n",
+    "$$\n",
+    "\n",
+    "using NRPy+'s `generic_matrix_inverter3x3()` function. \n",
+    "\n",
+    "In terms of these, the transformation of $W^i$ from Cartesian coordinates to `\"reference_metric::CoordSystem=Spherical\"`may be written:\n",
+    "\n",
+    "\\begin{align}\n",
+    "W^i_{\\rm Sph} &= \\frac{\\partial x^i_{\\rm Sph}}{\\partial x^\\ell_{\\rm Cart}} W^\\ell_{\\rm Cart}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import reference_metric as rfm    # NRPy+: Reference metric support\n",
+    "\n",
+    "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
+    "rfm.reference_metric()\n",
+    "\n",
+    "# Step 2.a: Construct Jacobian & Inverse Jacobians:\n",
+    "Jac_dUCart_dDrfmUD,Jac_dUrfm_dDCartUD = rfm.compute_Jacobian_and_inverseJacobian_tofrom_Cartesian()\n",
+    "\n",
+    "Sph_basis_Gamma_times_ValenciavU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    for l in range(DIM):\n",
+    "        Sph_basis_Gamma_times_ValenciavU[i] += Jac_dUrfm_dDCartUD[i][l] * Gamma_times_ValenciavU[l]\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    gf_interp_list.append(gf_interp(\"*SPHERICAL BASIS* Lorentz factor, times Valencia vU\"+str(i)))\n",
+    "    interp_expr = Sph_basis_Gamma_times_ValenciavU[i]\n",
+    "    which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i in range(DIM):\n",
     "    gf_interp_list.append(gf_interp(\"(speed-limited) Valencia 3-velocity vU\"+str(i)))\n",
     "    interp_expr = ValenciavU[i]\n",
@@ -939,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1495,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1525,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -1729,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2012,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2413,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
