--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -101,22 +101,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P_t =  0.0506115929072668\n",
-      "P_r =  0.000153561331523176\n"
+      "Be sure that P_r is inward-directed, and that the origin is set at r=0.\n",
+      "|P_t| =  0.0813467633310249\n",
+      "|P_r| =  0.000553891860334773\n"
      ]
     }
    ],
    "source": [
     "#### INPUT PARAMETERS:\n",
-    "qmassratio =  4.0  # m2/m1; by convention must be >= 1\n",
-    "nr         = 13.0  # Orbital separation\n",
+    "qmassratio =  1.75  # m2/m1; by convention must be >= 1\n",
+    "nr         =  10.8  # Orbital separation\n",
     "# Dimensionless spin parameters of each black hole\n",
     "nchi1x     = +0.   # chi_{1x}, x-component of spin vector for black hole 1\n",
-    "nchi1y     = +0.1\n",
-    "nchi1z     = +0.\n",
-    "nchi2x     = -0.3535\n",
-    "nchi2y     = +0.3535\n",
-    "nchi2z     = +0.5\n",
+    "nchi1y     = +0.\n",
+    "nchi1z     = +0.6\n",
+    "nchi2x     = +0.\n",
+    "nchi2y     = +0.\n",
+    "nchi2z     = +0.6\n",
     "\n",
     "#### DON'T TOUCH; see output after running this cell.\n",
     "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations\n",
@@ -139,8 +140,9 @@
     "                nchi1x=nchi1x, nchi1y=nchi1y, nchi1z=nchi1z,\n",
     "                nchi2x=nchi2x, nchi2y=nchi2y, nchi2z=nchi2z,  nPt=nPt)\n",
     "\n",
-    "print(\"P_t = \",nPt)\n",
-    "print(\"P_r = \",np_r)"
+    "print(\"Be sure that P_r is inward directed, and that the origin is set at r=0.\")\n",
+    "print(\"|P_t| = \",nPt)\n",
+    "print(\"|P_r| = \",np_r)"
    ]
   }
  ],
@@ -160,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
