NRPyPN/NRPyPN.ipynb: wording fix.

--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Be sure that P_r is inward-directed, and that the origin is set at r=0.\n",
+      "Be sure that P_r is inward directed, and that the center of mass is set at r=0.\n",
       "|P_t| =  0.0813467633310249\n",
       "|P_r| =  0.000553891860334773\n"
      ]
@@ -135,14 +135,14 @@
     "               nchi1x=nchi1x,nchi1y=nchi1y,nchi1z=nchi1z,\n",
     "               nchi2x=nchi2x,nchi2y=nchi2y,nchi2z=nchi2z)\n",
     "\n",
-    "np_r = num_eval(pr.p_r.subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421),\n",
+    "nPr = num_eval(pr.p_r.subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421),\n",
     "                qmassratio = qmassratio, nr=nr,\n",
     "                nchi1x=nchi1x, nchi1y=nchi1y, nchi1z=nchi1z,\n",
     "                nchi2x=nchi2x, nchi2y=nchi2y, nchi2z=nchi2z,  nPt=nPt)\n",
     "\n",
-    "print(\"Be sure that P_r is inward directed, and that the origin is set at r=0.\")\n",
+    "print(\"Be sure that P_r is inward directed, and that the center of mass is set at r=0.\")\n",
     "print(\"|P_t| = \",nPt)\n",
-    "print(\"|P_r| = \",np_r)"
+    "print(\"|P_r| = \",nPr)"
    ]
   }
  ],
