--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-three_waves.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-three_waves.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,14 +374,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "Created Tutorial-GiRaFFEfood_NRPy_1D_tests.tex, and compiled LaTeX file to\n",
+      "    PDF file Tutorial-GiRaFFEfood_NRPy_1D_tests.pdf\n"
      ]
     }
    ],
