--- a/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
+++ b/in_progress/GiRaFFE_NRPy_Tutorial.ipynb
@@ -24,8 +24,12 @@
     "            1. This test demonstrates the propagation of a specific MHD wave. \n",
     "        1. <font color='green'><b> Patrick Seal of Approval</b></font>[1-D test: Fast Wave](Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb)\n",
     "            1. This test demonstrates the propagation of another MHD wave.\n",
-    "        1. <font color='orange'><b> Needs to be added to tests.</b></font>[1-D test: Degenerate Alfv&eacute;n Wave](Tutorial-GiRaFFEfood_NRPy_1D_tests-degen_Alfven_wave)\n",
+    "        1. <font color='orange'><b> Needs to be added to tests.</b></font>[1-D test: Degenerate Alfv&eacute;n Wave](Tutorial-GiRaFFEfood_NRPy_1D_tests-degen_Alfven_wave.ipynb)\n",
     "            1. This test demonstrates the propagation of another MHD wave.\n",
+    "        1. <font color='orange'><b> Needs to be added to tests.</b></font>[1-D test: Three Waves](Tutorial-GiRaFFEfood_NRPy_1D_tests-three_waves.ipynb)\n",
+    "            1. This test demonstrates the propagation of three simultaneous MHD waves.\n",
+    "        1. <font color='orange'><b> Needs to be added to tests.</b></font>[1-D test: FFE Breakdown](Tutorial-GiRaFFEfood_NRPy_1D_tests-FFE_breakdown.ipynb)\n",
+    "            1. This test demonstrates the limits of our code.\n",
     "        1. More initial data to come!\n",
     "    1. *Validation*\n",
     "        1. [Validation of all initial data choices against original `GiRaFFEfood`, demonstrating agreement to round-off error.](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb) <font color='green'><b> Patrick Seal of Approval</b></font>\n",
