Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy: Added the three new initial data options to the unit test.

--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-FFE_breakdown.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-FFE_breakdown.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). The initial data has validated against the original `GiRaFFE`, as documented [here](Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb).\n",
     "\n",
-    "### NRPy+ Source Code for this module: [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_FFE_Breakdown.py](../edit/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_FFE_Breakdown.py)\n",
+    "### NRPy+ Source Code for this module: [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_FFE_Breakdown.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_FFE_breakdown.py)\n",
     "\n",
     "## Introduction:\n",
     "\n",
@@ -170,7 +170,7 @@
     "boundR = sp.Rational(1,5)\n",
     "\n",
     "Ayleft = x - sp.Rational(1,5)\n",
-    "Aycenter = -sp.sympify(5) + x - sp.Rational(1,5)\n",
+    "Aycenter = -sp.sympify(5)*x**2 + x - sp.Rational(1,5)\n",
     "Ayright = -x\n",
     "\n",
     "AD[0] = sp.sympify(0)\n",
@@ -239,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1/2\n"
+     ]
+    }
+   ],
    "source": [
     "EU = ixp.zerorank1()\n",
     "EU[0] = sp.sympify(0)\n",
@@ -317,7 +325,7 @@
    ],
    "source": [
     "import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests_FFE_breakdown as gfho\n",
-    "gfho.GiRaFFEfood_NRPy_1D_tests()\n",
+    "gfho.GiRaFFEfood_NRPy_1D_tests_FFE_breakdown()\n",
     "\n",
     "def consistency_check(quantity1,quantity2,string):\n",
     "    if quantity1-quantity2==0:\n",
