--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
@@ -22,8 +22,11 @@
     "**Validation Notes:** This module validates all expressions used to set up initial data in \n",
     "* [Tutorial-GiRaFFEfood_NRPy_Exact_Wald](Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb)\n",
     "* [Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator](Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb)\n",
-    "* [Tutorial-GiRaFFEfood_NRPy_1D_tests](Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb), and \n",
+    "* [Tutorial-GiRaFFEfood_NRPy_1D_tests](Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb), \n",
     "* [Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave](Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb), \n",
+    "* [Tutorial-GiRaFFEfood_NRPy_1D_tests-degen_Alfven_wave](Tutorial-GiRaFFEfood_NRPy_1D_tests-degen_Alfven_wave.ipynb), \n",
+    "* [Tutorial-GiRaFFEfood_NRPy_1D_tests-three_waves](Tutorial-GiRaFFEfood_NRPy_1D_tests-three_waves.ipynb), and\n",
+    "* [Tutorial-GiRaFFEfood_NRPy_1D_tests-FFE_breakdown](Tutorial-GiRaFFEfood_NRPy_1D_tests-FFE_breakdown.ipynb), \n",
     "\n",
     "against the C-code implementation of these expressions found in the original (trusted) [`GiRaFFEfood` Einstein Toolkit thorn](link), and confirms roundoff-level agreement.\n",
     "\n",
@@ -32,6 +35,9 @@
     "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Aligned_Rotator.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_Aligned_Rotator.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb) Generates Aligned Rotator initial data\n",
     "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb) Generates Alfv&eacute;n Wave initial data.\n",
     "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_fast_wave.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_fast_wave.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb) Generates Alfv&eacute;n Wave initial data.\n",
+    "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_degen_Alfven_wave.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_degen_Alfven_wave.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_1D_tests-degen_Alfven_wave.ipynb) Generates Degenerate Alfv&eacute;n Wave initial data.\n",
+    "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_three_waves.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_three_waves.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_1D_tests-three_waves.ipynb) Generates Three Waves initial data.\n",
+    "* [GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_FFE_breakdown.py](../../edit/in_progress/GiRaFFEfood_NRPy/GiRaFFEfood_NRPy_1D_tests_FFE_breakdown.py) [\\[**tutorial**\\]](Tutorial-GiRaFFEfood_NRPy_1D_tests-FFE_breakdown.ipynb) Generates FFE Breakdown initial data.\n",
     "\n",
     "## Introduction:\n",
     "\n",
@@ -83,7 +89,8 @@
    "outputs": [],
    "source": [
     "# There are several initial data routines we need to test. We'll control which one we use with a string option\n",
-    "initial_data = \"ExactWald\" # Valid options: \"AllTests\", \"ExactWald\", \"AlignedRotator\", \"AlfvenWave\", \"FastWave\""
+    "initial_data = \"ThreeWaves\" # Valid options: \"AllTests\", \"ExactWald\", \"AlignedRotator\", \"AlfvenWave\", \"FastWave\",\n",
+    "                           # \"DegenAlfvenWave\", \"ThreeWaves\", \"FFE_Breakdown\""
    ]
   },
   {
@@ -222,6 +229,18 @@
     "    import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests_fast_wave as gid\n",
     "    gid.GiRaFFEfood_NRPy_1D_tests_fast_wave()\n",
     "    desc = \"Generate fast wave 1D initial test data for GiRaFFEfood_NRPy.\"\n",
+    "elif initial_data==\"DegenAlfvenWave\":\n",
+    "    import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests_degen_Alfven_wave as gid\n",
+    "    gid.GiRaFFEfood_NRPy_1D_tests_degen_Alfven_wave()\n",
+    "    desc = \"Generate degenerate Alfven wave 1D initial test data for GiRaFFEfood_NRPy.\"\n",
+    "elif initial_data==\"ThreeWaves\":\n",
+    "    import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests_three_waves as gid\n",
+    "    gid.GiRaFFEfood_NRPy_1D_tests_three_waves()\n",
+    "    desc = \"Generate three waves 1D initial test data for GiRaFFEfood_NRPy.\"\n",
+    "elif initial_data==\"FFE_Breakdown\":\n",
+    "    import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests_FFE_breakdown as gid\n",
+    "    gid.GiRaFFEfood_NRPy_1D_tests_FFE_breakdown()\n",
+    "    desc = \"Generate FFE breakdown 1D initial test data for GiRaFFEfood_NRPy.\"\n",
     "elif initial_data==\"AlignedRotator\":\n",
     "    import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_Aligned_Rotator as gid\n",
     "    gid.GiRaFFEfood_NRPy_Aligned_Rotator()\n",
@@ -232,7 +251,7 @@
     "    gid.GiRaFFEfood_NRPy_Exact_Wald(gammaDD,M,r0)\n",
     "    desc = \"Generate exact Wald initial test data for GiRaFFEfood_NRPy.\"\n",
     "else:\n",
-    "    print(\"Unsupported Initial Data string \"+initial_data+\"! Supported ID: AlfvenWave, FastWave, AlignedRotator, or ExactWald\")\n",
+    "    print(\"Unsupported Initial Data string \"+initial_data+\"! Supported ID: AllTests, AlfvenWave, FastWave, DegenAlfvenWave, ThreeWaves, FFE_Breakdown, AlignedRotator, or ExactWald\")\n",
     "\n",
     "name = \"GiRaFFE_NRPy_initial_data\"\n",
     "\n",
@@ -274,17 +293,23 @@
     "# First download the original GiRaFFE source code\n",
     "import urllib\n",
     "\n",
-    "original_file_url  = [\\\n",
-    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/AlfvenWave.cc\",\\\n",
-    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/FastWave.cc\",\\\n",
-    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/AlignedRotator.cc\",\\\n",
-    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/ExactWald.cc\",\\\n",
+    "original_file_url  = [\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/AlfvenWave.cc\",\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/FastWave.cc\",\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/b826f6578b0c2b5a43ad9171e65a1b0af88d8b77/GiRaFFEfood/src/DegenAlfvenWave.cc\",\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/b826f6578b0c2b5a43ad9171e65a1b0af88d8b77/GiRaFFEfood/src/ThreeAlfvenWave.cc\",\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/b826f6578b0c2b5a43ad9171e65a1b0af88d8b77/GiRaFFEfood/src/FFEBreakdown.cc\",\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/AlignedRotator.cc\",\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/ExactWald.cc\",\n",
     "                     ]\n",
-    "original_file_name = [\\\n",
-    "                      \"AlfvenWave.cc\",\\\n",
-    "                      \"FastWave.cc\",\\\n",
-    "                      \"AlignedRotator.cc\",\\\n",
-    "                      \"ExactWald.cc\",\\\n",
+    "original_file_name = [\n",
+    "                      \"AlfvenWave.cc\",\n",
+    "                      \"FastWave.cc\",\n",
+    "                      \"DegenAlfvenWave.cc\",\n",
+    "                      \"ThreeAlfvenWave.cc\",\n",
+    "                      \"FFEBreakdown.cc\",\n",
+    "                      \"AlignedRotator.cc\",\n",
+    "                      \"ExactWald.cc\",\n",
     "                     ]\n",
     "\n",
     "for i in range(len(original_file_url)):\n",
@@ -354,7 +379,7 @@
     "params.invdx2 = 1.0 / params.dxx2;\n",
     "\\n\"\"\")\n",
     "\n",
-    "if initial_data==\"ExactWald\":\n",
+    "if initial_data==\"ExactWald\" or initial_data==\"AllTests\":\n",
     "    with open(os.path.join(out_dir,\"free_parameters.h\"),\"a\") as file:\n",
     "        file.write(\"\"\"params.r0 = 0.4;\n",
     "params.a = 0.0;\n",
@@ -505,7 +530,7 @@
     "CCTK_REAL *betay;\n",
     "CCTK_REAL *betaz;\n",
     "\n",
-    "// We need to declare these to compile a function we won't call:\n",
+    "// We need to declare these to compile functions we won't call:\n",
     "int Compute_Exact_Every;\n",
     "int cctk_iteration;\n",
     "CCTK_REAL *delpsi6phi;\n",
@@ -525,6 +550,20 @@
     "CCTK_REAL *delvx;\n",
     "CCTK_REAL *delvy;\n",
     "CCTK_REAL *delvz;\n",
+    "CCTK_REAL cctk_time = 0.0;\n",
+    "CCTK_REAL *exactBx_ThreeWaves;\n",
+    "CCTK_REAL *exactBy_ThreeWaves;\n",
+    "CCTK_REAL *exactBz_ThreeWaves;\n",
+    "CCTK_REAL *delBx_ThreeWaves;\n",
+    "CCTK_REAL *delBy_ThreeWaves;\n",
+    "CCTK_REAL *delBz_ThreeWaves;\n",
+    "CCTK_REAL *mhd_st_x;\n",
+    "CCTK_REAL *mhd_st_y;\n",
+    "CCTK_REAL *mhd_st_z;\n",
+    "CCTK_REAL *Ex;\n",
+    "CCTK_REAL *Ey;\n",
+    "CCTK_REAL *Ez;\n",
+    "CCTK_REAL *B2mE2;\n",
     "\n",
     "// Set constants to default for comparison\n",
     "CCTK_REAL wave_speed = -0.5;\n",
@@ -543,15 +582,16 @@
     "#define CCTK_GFINDEX3D(cctkGH,i,j,k) (i) + cctk_lsh[0] * ( (j) + cctk_lsh[1] * (k) )\n",
     "#define CCTK_GFINDEX4D(cctkGH,i,j,k,g) \\\n",
     "( (i) + cctk_lsh[0] * ( (j) + cctk_lsh[1] * ( (k) + cctk_lsh[2] * (g) ) ) )\n",
-    "/*#define CCTK_VInfo(a01,a02,a03,a04,a05,a06,a07) //\n",
-    "//,a08,a09,a10,a11,a12\n",
-    "#define CCTK_VWarn(b01,b02,b03,b04,b05,b06,b07,b08,b09,b10,b11,b12,b13,b14,b15,b16,b17,b18,b19,b20,b21,b22,b23,b24,b25) //\n",
-    "*/\n",
+    "#define CCTK_VInfo(...) //\n",
+    "//#define CCTK_VWarn(...) //\n",
     "\n",
     "#include \"AlfvenWave.cc\"\n",
     "#include \"FastWave.cc\"\n",
     "#include \"AlignedRotator.cc\"\n",
     "#include \"ExactWald.cc\"\n",
+    "#include \"DegenAlfvenWave.cc\"\n",
+    "#include \"ThreeAlfvenWave.cc\"\n",
+    "#include \"FFEBreakdown.cc\"\n",
     "\n",
     "int main(int argc, char** argv) {\n",
     "    paramstruct params;\n",
@@ -603,6 +643,9 @@
     "    else if(atoi(argv[1])==1) GiRaFFEfood_AlignedRotator();\n",
     "    else if(atoi(argv[1])==2) {Shifted_Kerr_Schild_initial_metric(&params,xx,auxevol_gfs);GiRaFFEfood_ExactWald();}\n",
     "    else if(atoi(argv[1])==3) GiRaFFEfood_FastWave();\n",
+    "    else if(atoi(argv[1])==4) GiRaFFEfood_DegenAlfvenWave();\n",
+    "    else if(atoi(argv[1])==5) GiRaFFEfood_ThreeAlfvenWave();\n",
+    "    else if(atoi(argv[1])==6) GiRaFFEfood_FFEBreakdown();\n",
     "\n",
     "    int all_agree = 1;\n",
     "\n",
@@ -633,11 +676,15 @@
     "    // Shift the grid to compare A_x\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS1;j++) xx[1][j] += 0.5*dxx1;\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS2;j++) xx[2][j] += 0.5*dxx2;\n",
+    "\n",
     "    GiRaFFE_NRPy_initial_data(&params,xx,auxevol_gfs,evol_gfs);\n",
     "    if(atoi(argv[1])==0) GiRaFFEfood_AlfvenWave();\n",
     "    else if(atoi(argv[1])==1) GiRaFFEfood_AlignedRotator();\n",
     "    else if(atoi(argv[1])==2) {Shifted_Kerr_Schild_initial_metric(&params,xx,auxevol_gfs);GiRaFFEfood_ExactWald();}\n",
     "    else if(atoi(argv[1])==3) GiRaFFEfood_FastWave();\n",
+    "    else if(atoi(argv[1])==4) GiRaFFEfood_DegenAlfvenWave();\n",
+    "    else if(atoi(argv[1])==5) GiRaFFEfood_ThreeAlfvenWave();\n",
+    "    else if(atoi(argv[1])==6) GiRaFFEfood_FFEBreakdown();\n",
     "    for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++){\n",
     "        for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++){\n",
     "            for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++){\n",
@@ -658,6 +705,9 @@
     "    else if(atoi(argv[1])==1) GiRaFFEfood_AlignedRotator();\n",
     "    else if(atoi(argv[1])==2) {Shifted_Kerr_Schild_initial_metric(&params,xx,auxevol_gfs);GiRaFFEfood_ExactWald();}\n",
     "    else if(atoi(argv[1])==3) GiRaFFEfood_FastWave();\n",
+    "    else if(atoi(argv[1])==4) GiRaFFEfood_DegenAlfvenWave();\n",
+    "    else if(atoi(argv[1])==5) GiRaFFEfood_ThreeAlfvenWave();\n",
+    "    else if(atoi(argv[1])==6) GiRaFFEfood_FFEBreakdown();\n",
     "    for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++){\n",
     "        for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++){\n",
     "            for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++){\n",
@@ -678,6 +728,9 @@
     "    else if(atoi(argv[1])==1) GiRaFFEfood_AlignedRotator();\n",
     "    else if(atoi(argv[1])==2) {Shifted_Kerr_Schild_initial_metric(&params,xx,auxevol_gfs);GiRaFFEfood_ExactWald();}\n",
     "    else if(atoi(argv[1])==3) GiRaFFEfood_FastWave();\n",
+    "    else if(atoi(argv[1])==4) GiRaFFEfood_DegenAlfvenWave();\n",
+    "    else if(atoi(argv[1])==5) GiRaFFEfood_ThreeAlfvenWave();\n",
+    "    else if(atoi(argv[1])==6) GiRaFFEfood_FFEBreakdown();\n",
     "    for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++){\n",
     "        for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++){\n",
     "            for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++){\n",
@@ -712,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -722,36 +775,6 @@
      "output_type": "stream",
      "text": [
       "Now compiling, should take ~2 seconds...\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "In file included from Validation/GiRaFFEfood_NRPy_unit_test.C:120:0:\n",
-      "Validation/ExactWald.cc: In function 'void GiRaFFEfood_ConvergenceWald()':\n",
-      "Validation/ExactWald.cc:253:14: error: 'CCTK_THORNSTRING' was not declared in this scope\n",
-      "   CCTK_VInfo(CCTK_THORNSTRING,\"norm2AtAxAyAz: %e %e %e %e | %e\\n\",norm2At, norm2Ax, norm2Ay, norm2Az, delAx[CCTK_GFINDEX3D(cctkGH,3,3,3)]);\n",
-      "              ^~~~~~~~~~~~~~~~\n",
-      "Validation/ExactWald.cc:253:138: error: 'CCTK_VInfo' was not declared in this scope\n",
-      "   CCTK_VInfo(CCTK_THORNSTRING,\"norm2AtAxAyAz: %e %e %e %e | %e\\n\",norm2At, norm2Ax, norm2Ay, norm2Az, delAx[CCTK_GFINDEX3D(cctkGH,3,3,3)]);\n",
-      "                                                                                                                                          ^\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished in 47.35970902442932 seconds.\n",
-      "\n",
-      "\n",
-      "Now running...\n",
-      "\n",
-      "(EXEC): Executing `cmd /c GiRaFFEfood_NRPy_unit_test 2`...\n",
-      "(BENCH): Finished executing in 1.0960628986358643 seconds.\n",
-      "Finished in 1.4040803909301758 seconds.\n",
-      "\n",
       "\n"
      ]
     }
@@ -769,9 +792,7 @@
     "results_file = \"out_GiRaFFEfood_NRPy_test.txt\"\n",
     "\n",
     "# os.chdir(out_dir)\n",
-    "print(\"Now running...\\n\")\n",
     "os.chdir(out_dir)\n",
-    "start = time.time()\n",
     "# cmd.Execute(os.path.join(\"GiRaFFEfood_NRPy_unit_test\"))\n",
     "if initial_data==\"AlfvenWave\":\n",
     "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"0\",results_file)\n",
@@ -781,9 +802,13 @@
     "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"2\",results_file)\n",
     "elif initial_data==\"FastWave\":\n",
     "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"3\",results_file)\n",
-    "end = time.time()\n",
-    "os.chdir(os.path.join(\"../\"))\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")"
+    "elif initial_data==\"DegenAlfvenWave\":\n",
+    "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"4\",results_file)\n",
+    "elif initial_data==\"ThreeWaves\":\n",
+    "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"5\",results_file)\n",
+    "elif initial_data==\"FFE_Breakdown\":\n",
+    "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"6\",results_file)\n",
+    "os.chdir(os.path.join(\"../\"))"
    ]
   },
   {
@@ -795,35 +820,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Quantity ValenciavU0 only agrees with the original GiRaFFE to 0.70 digits at i0,i1,i2=0,0,0!\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3327: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(os.path.join(out_dir,results_file),\"r\") as file:\n",
     "    output = file.readline()\n",
