--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "1. [Step 1](#intro): Introduction: Lexical Analysis and Syntax Analysis\n",
     "1. [Step 2](#sandbox): Demonstration and Sandbox (LaTeX Parser)\n",
-    "1. [Step 3](#tensor): Tensor Support with Einstein Notation (WIP)\n",
+    "1. [Step 3](#tensor): Tensor Support with Einstein Notation\n",
     "1. [Step 4](#latex_pdf_output): $\\LaTeX$ PDF Output"
    ]
   },
@@ -52,21 +52,23 @@
     "<ROOT>         -> <EXPRESSION> | <STRUCTURE> { <LINE_BREAK> <STRUCTURE> }*\n",
     "<STRUCTURE>    -> <CONFIG> | <ENVIRONMENT> | <ASSIGNMENT>\n",
     "<ENVIRONMENT>  -> <BEGIN_ALIGN> <ASSIGNMENT> { <LINE_BREAK> <ASSIGNMENT> }* <END_ALIGN>\n",
-    "<ASSIGNMENT>   -> <VARIABLE> = <EXPRESSION>\n",
+    "<ASSIGNMENT>   -> ( <VARIABLE> | <CDRV> ) = <EXPRESSION>\n",
     "<EXPRESSION>   -> <TERM> { ( '+' | '-' ) <TERM> }*\n",
     "<TERM>         -> <FACTOR> { [ '/' ] <FACTOR> }*\n",
     "<FACTOR>       -> ( <BASE> | <EULER> ) { '^' <EXPONENT> }*\n",
-    "<BASE>         -> [ '-' ] ( <ATOM> | '(' <EXPRESSION> ')' [ '_' '{' ',' { <SYMBOL> }+ '}' ] )\n",
+    "<BASE>         -> [ '-' ] ( <ATOM> | '(' <EXPRESSION> ')' )\n",
     "<EXPONENT>     -> <BASE> | '{' <BASE> '}'\n",
-    "<ATOM>         -> <VARIABLE> | <NUMBER> | <COMMAND>\n",
+    "<ATOM>         -> <VARIABLE> | <NUMBER> | <OPERATOR> | <COMMAND>\n",
     "<VARIABLE>     -> <ARRAY> | <SYMBOL> [ '_' ( <SYMBOL> | <INTEGER> ) ]\n",
-    "<NUMBER>       -> <RATIONAL> | <DECIMAL> | <INTEGER>\n",
-    "<COMMAND>      -> <SQRT> | <FRAC> | <NLOG> | <TRIG> | <DERV>\n",
+    "<NUMBER>       -> <RATIONAL> | <DECIMAL> | <INTEGER> | <PI>\n",
+    "<COMMAND>      -> <SQRT> | <FRAC> | <NLOG> | <TRIG>\n",
+    "<OPERATOR>     -> <PDRV> | <CDRV>\n",
     "<SQRT>         -> <SQRT_CMD> [ '[' <INTEGER> ']' ] '{' <EXPRESSION> '}'\n",
     "<FRAC>         -> <FRAC_CMD> '{' <EXPRESSION> '}' '{' <EXPRESSION> '}'\n",
     "<NLOG>         -> <NLOG_CMD> [ '_' <INTEGER> | { <INTEGER> } ] ( <SYMBOL> | <INTEGER> | '(' <EXPRESSION> ')' )\n",
     "<TRIG>         -> <TRIG_CMD> [ '^' <INTEGER> | { <INTEGER> } ] ( <SYMBOL> | <INTEGER> | '(' <EXPRESSION> ')' )\n",
-    "<DERV>         -> { <DERV_CMD> '_' <SYMBOL> }+ ( <ARRAY> | '(' <EXPRESSION> ')' )\n",
+    "<PDRV>         -> { <PDRV_OP> '_' <SYMBOL> }+ ( <ARRAY> | '(' <EXPRESSION> ')' )\n",
+    "<CDRV>         -> { <CDRV_OP> ( '^' | '_' ) <SYMBOL> }+ ( <ARRAY> | '(' <EXPRESSION> ')' )\n",
     "<CONFIG>       -> '%' <ARRAY> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] { ',' <ARRAY> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] }*\n",
     "<ARRAY>        -> <TENSOR> ( '_' <LOWER_INDEX> ) | ( '^' <UPPER_INDEX> [ '_' <LOWER_INDEX> ] ] )\n",
     "<LOWER_INDEX>  -> <SYMBOL> | '{' { <SYMBOL> }* [ ',' { <SYMBOL> }+ ] '}'\n",
@@ -294,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 1 (Tensor Contraction)\n",
+    "#### Example 1 (Contraction)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
     "<pre lang=\"latex\"> h = h^\\\\mu{}_\\\\mu </pre> | $$ h = h^\\mu{}_\\mu $$"
@@ -318,7 +320,7 @@
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % h^\\mu_\\mu [4]: nosym;\n",
+    "    % h^\\mu_\\nu [4]: nosym;\n",
     "    h = h^\\mu{}_\\mu\n",
     "\"\"\")"
    ]
@@ -347,7 +349,7 @@
     "#### Example 2 (Index Raising)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> v^\\\\mu = g^{\\\\mu\\\\nu}v_\\\\nu </pre> | $$ v^\\mu = g^{\\mu\\nu}v_\\nu $$"
+    "<pre lang=\"latex\"> v^\\\\mu = g^{\\\\mu\\\\nu} v_\\\\nu </pre> | $$ v^\\mu = g^{\\mu\\nu} v_\\nu $$"
    ]
   },
   {
@@ -369,7 +371,7 @@
    "source": [
     "parse(r\"\"\"\n",
     "    % g^{\\mu\\nu} [3]: metric, v_\\nu [3];\n",
-    "    v^\\mu = g^{\\mu\\nu}v_\\nu\n",
+    "    v^\\mu = g^{\\mu\\nu} v_\\nu\n",
     "\"\"\")"
    ]
   },
@@ -397,7 +399,7 @@
     "#### Example 3 (Einstein Tensor)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; R &= g_{ab}R^{ab} \\\\\\\\ <br>&emsp;&emsp;&emsp; G^{ab} &= R^{ab} - \\\\frac{1}{2}g^{ab}R <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} R &= g_{ab}R^{ab} \\\\ G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R \\end{align*} $$"
+    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; R &= g_{ab} R^{ab} \\\\\\\\ <br>&emsp;&emsp;&emsp; G^{ab} &= R^{ab} - \\\\frac{1}{2}g^{ab}R <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} R &= g_{ab} R^{ab} \\\\ G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R \\end{align*} $$"
    ]
   },
   {
@@ -420,7 +422,7 @@
     "parse(r\"\"\"\n",
     "    % g_{ab} [2]: metric, R^{ab} [2]: sym01;\n",
     "    \\begin{align*}\n",
-    "        R &= g_{ab}R^{ab} \\\\\n",
+    "        R &= g_{ab} R^{ab} \\\\\n",
     "        G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R\n",
     "    \\end{align*}\n",
     "\"\"\")"
@@ -575,12 +577,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We extended our robust error messaging using the custom `TensorError` exception, which should handle any inconsistent tensor dimension and any violation of the Einstein summation convention, specifically that a bound index must appear exactly once as a superscript and exactly once as a subscript in any single term and that a free index must appear in every term with the same position and cannot be summed over in any term. The following are runnable examples of possible error messages (simply uncomment and run the cell):"
+    "#### Example 5 (Covariant Derivative)\n",
+    "LaTeX Source | Rendered LaTeX\n",
+    ":----------- | :-------------\n",
+    "<pre lang=\"latex\"> J^\\mu = (4\\pi k)^{-1} D_\\nu F^{\\mu\\nu} </pre> | $$ J^\\mu = (4\\pi k)^{-1} D_\\nu F^{\\mu\\nu} $$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['GammaUDD', 'FUU', 'FUU_dD', 'gUU', 'gDD', 'gDD_dD', 'FUU_cdD', 'JU']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse(r\"\"\"\n",
+    "    % F^{\\mu\\nu} [4]: anti01;\n",
+    "    J^\\mu = (4\\pi k)^{-1} D_\\nu F^{\\mu\\nu}\n",
+    "\"\"\", debug=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following are contextually inferred, dynamically generated, and injected into the global namespace for expansion of the covariant derivative $D_\\nu F^{\\mu\\nu}$\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "    \\Gamma^\\mu_{ba} &= \\frac{1}{2} g^{\\mu c}(g_{a c,b} + g_{c b,a} - g_{b a,c}) \\\\\n",
+    "    D_a F^{\\mu \\nu} &= \\partial_a F^{\\mu \\nu} + \\Gamma^\\mu_{b a} F^{b \\nu} + \\Gamma^\\nu_{b a} F^{\\mu b}\n",
+    "\\end{align*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GammaUDD = [[[sum([gUU[mu][c]*gDD_dD[a][c][b]/2 for c in range(4)]) - sum([gUU[mu][c]*gDD_dD[b][a][c]/2 for c in range(4)]) + sum([gUU[mu][c]*gDD_dD[c][b][a]/2 for c in range(4)]) for mu in range(4)] for b in range(4)] for a in range(4)] \n",
+      "\n",
+      "FUU_cdD = [[[sum([FUU[b][nu]*GammaUDD[mu][b][a] for b in range(4)]) + sum([FUU[mu][b]*GammaUDD[nu][b][a] for b in range(4)]) + FUU_dD[mu][nu][a] for a in range(4)] for mu in range(4)] for nu in range(4)] \n",
+      "\n",
+      "JU = [sum([FUU_cdD[mu][nu][nu]/(4*pi*k) for nu in range(4)]) for mu in range(4)] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('GammaUDD =', GammaUDD, '\\n')\n",
+    "print('FUU_cdD =', FUU_cdD, '\\n')\n",
+    "print('JU =', JU, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We extended our robust error messaging using the custom `TensorError` exception, which should handle any inconsistent tensor dimension and any violation of the Einstein summation convention, specifically that a bound index must appear exactly once as a superscript and exactly once as a subscript in any single term and that a free index must appear in every term with the same position and cannot be summed over in any term. The following are runnable examples of possible error messages (simply uncomment and run the cell):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
