--- a/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb
@@ -246,6 +246,31 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from outputC import outCfunction, outputC # NRPy+: Core C code output module\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import GiRaFFE_NRPy.GiRaFFE_NRPy_Characteristic_Speeds as chsp\n",
+    "\n",
+    "gammaDD = ixp.declarerank2(\"gammaDD\",\"sym01\",DIM=3)\n",
+    "betaU = ixp.declarerank1(\"betaU\",DIM=3)\n",
+    "alpha = sp.sympify(\"alpha\")\n",
+    "\n",
+    "for flux_dirn in range(3):\n",
+    "    chsp.find_cmax_cmin(flux_dirn,gammaDD,betaU,alpha)\n",
+    "    Ccode_kernel = outputC([chsp.cmax,chsp.cmin],[\"cmax\",\"cmin\"],\"returnstring\",params=\"outCverbose=False,CSE_sorting=none\")\n",
+    "    Ccode_kernel = Ccode_kernel.replace(\"cmax\",\"*cmax\").replace(\"cmin\",\"*cmin\")\n",
+    "    Ccode_kernel = Ccode_kernel.replace(\"betaU0\",\"betaUi\").replace(\"betaU1\",\"betaUi\").replace(\"betaU2\",\"betaUi\")\n",
+    "\n",
+    "    with open(os.path.join(Ccodesdir,\"compute_cmax_cmin_dirn\"+str(flux_dirn)+\".h\"),\"w\") as file:\n",
+    "        file.write(Ccode_kernel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -261,45 +286,20 @@
     "                    const REAL gammaDD11, const REAL gammaDD12, const REAL gammaDD22,\n",
     "                    const REAL betaUi, const REAL alpha, const int flux_dirn,\n",
     "                    REAL *cmax, REAL *cmin) {\n",
-    "    // First, we find the inverse metric component we need. We pass in value of the metric components\n",
-    "    // at the current point, and use a switch statement to compute only the component we need.\n",
-    "    const double tmp_4 = (1.0/(gammaDD00*gammaDD11*gammaDD22 - gammaDD00*((gammaDD12)*(gammaDD12)) - ((gammaDD01)*(gammaDD01))*gammaDD22 + 2*gammaDD01*gammaDD02*gammaDD12 - ((gammaDD02)*(gammaDD02))*gammaDD11));\n",
-    "    REAL gammaUUii;\n",
     "    switch(flux_dirn) {\n",
     "        case 0:\n",
-    "            gammaUUii = tmp_4*(gammaDD11*gammaDD22 - ((gammaDD12)*(gammaDD12))); // gammaUU00\n",
+    "#include \"compute_cmax_cmin_dirn0.h\"\n",
     "            break;\n",
     "        case 1:\n",
-    "            gammaUUii = tmp_4*(gammaDD00*gammaDD22 - ((gammaDD02)*(gammaDD02))); // gammaUU11\n",
+    "#include \"compute_cmax_cmin_dirn1.h\"\n",
     "            break;\n",
     "        case 2:\n",
-    "            gammaUUii = tmp_4*(gammaDD00*gammaDD11 - ((gammaDD01)*(gammaDD01))); // gammaUU22\n",
+    "#include \"compute_cmax_cmin_dirn2.h\"\n",
     "            break;\n",
     "        default:\n",
-    "            printf(\"Invalid parameter flux_dirn!\"); gammaUUii = 1.0/0.0;\n",
+    "            printf(\"Invalid parameter flux_dirn!\"); *cmax = 1.0/0.0; *cmin = 1.0/0.0;\n",
     "            break;\n",
     "    }\n",
-    "    // We have passed the lapse alpha at the current point and betaU[flux_dirn] at the current poitn\n",
-    "    // into the function.\n",
-    "    // a = 1/(alpha^2)\n",
-    "    const REAL a = 1.0/(alpha*alpha);\n",
-    "    // b = 2 beta^i / alpha^2\n",
-    "    const REAL b = 2.0 * betaUi /(alpha*alpha);\n",
-    "    // c = -g^{ii} + (beta^i)^2 / alpha^2\n",
-    "    const REAL c = - gammaUUii + betaUi*betaUi/(alpha*alpha);\n",
-    "\n",
-    "    // Now, we are free to solve the quadratic equation as usual. We take care to avoid passing a\n",
-    "    // negative value to the sqrt function.\n",
-    "    REAL detm = b*b - 4.0*a*c;\n",
-    "\n",
-    "    // Based on a trick from Roland Haas:\n",
-    "    // detm = sqrt(MAX(0,detm))\n",
-    "    detm = sqrt(0.5*(detm + fabs(detm)));\n",
-    "    const REAL cplus  = 0.5*(-b/a + detm/a);\n",
-    "    const REAL cminus = 0.5*(-b/a - detm/a);\n",
-    "\n",
-    "    *cmax = 0.5*(cplus + fabs(cplus)); // MAX(cplus, 0)\n",
-    "    *cmin = -0.5*(cminus - fabs(cminus)); // -MIN(cminus, 0)\n",
     "}"
    ]
   },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
