Tutorial-GiRaFFE_NRPy_Main_Driver_staggered: Wrote IGM/Valencia 3-velocity workaround functions.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -553,6 +553,34 @@
     "    fclose(out2D);\n",
     "}\n",
     "\n",
+    "#define WORKAROUND_ENABLED\n",
+    "\n",
+    "void workaround_Valencia_to_Drift_velocity(REAL *auxevol_gfs,const int baseGF, const int *GFoffsets, const int numGFs) {\n",
+    "    // Converts Valencia 3-velocities to Drift 3-velocities for testing. The variable arguments\n",
+    "    // must be the GFs to be converted, e.g. VALENCIAVU0GF\n",
+    "    // This function must be called once for each reconstruction! i.e.\n",
+    "    for(int n = 0; n<numGFs; n++) {\n",
+    "#pragma omp parallel for\n",
+    "        int GF = baseGF+GFoffsets[n];\n",
+    "        for(int ii=0;ii<Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2*NUM_EVOL_GFS;ii++) {\n",
+    "            auxevol_gfs[IDX4ptS(GF,ii)] = auxevol_gfs[IDX4ptS(ALPHAGF,ii)]*auxevol_gfs[IDX4ptS(GF,ii)]-auxevol_gfs[IDX4ptS(BETAU0GF+GFoffsets[n],ii)]\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "void workaround_Drift_to_Valencia_velocity(REAL *auxevol_gfs,const int baseGF, const int *GFoffsets, const int numGFs) {\n",
+    "    // Converts Drift 3-velocities to Valencia 3-velocities for testing. The variable arguments\n",
+    "    // must be the GFs to be converted, e.g. VALENCIAVU0GF\n",
+    "    // This function must be called once for each reconstruction! i.e.\n",
+    "    for(int n = 0; n<numGFs; n++) {\n",
+    "#pragma omp parallel for\n",
+    "        int GF = baseGF+GFoffsets[n];\n",
+    "        for(int ii=0;ii<Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2*NUM_EVOL_GFS;ii++) {\n",
+    "            auxevol_gfs[IDX4ptS(GF,ii)] = (auxevol_gfs[IDX4ptS(GF,ii)]+auxevol_gfs[IDX4ptS(BETAU0GF+GFoffsets[n],ii)])/auxevol_gfs[IDX4ptS(ALPHAGF,ii)]\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
     "void calculate_GRFFE_characteristic_speeds(const paramstruct *restrict params,\n",
     "                                           const REAL *alpha, const REAL *betaU2,\n",
     "                                           const REAL *gammaDD00, const REAL *gammaDD01, const REAL *gammaDD02,\n",
