Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten: Fixed several bugs in the curved space implementation.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.ipynb
@@ -102,11 +102,9 @@
     "\n",
     "out_dir = \"Validation/\"\n",
     "cmd.mkdir(out_dir)\n",
-    "subdir = \"Afield_flux\"\n",
-    "cmd.mkdir(os.path.join(out_dir,subdir))\n",
     "\n",
     "thismodule = \"Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux\"\n",
-    "Use_Shock_Data = True"
+    "Use_Shock_Data = False"
    ]
   },
   {
@@ -160,33 +158,30 @@
     "betaU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"betaU\",DIM=3)\n",
     "alpha = gri.register_gridfunctions(\"AUXEVOL\",\"alpha\")\n",
     "\n",
-    "gammaDD[0][0] = a*x**3 + b*y**3 + c*z**3 + d*y**2 + e*z**2 + sp.sympify(1)\n",
-    "gammaDD[1][1] = g*x**3 + h*y**3 + l*z**3 + m*x**2 + n*z**2 + sp.sympify(1)\n",
-    "gammaDD[2][2] = p*x**3 + q*y**3 + r*z**3 + s*x**2 + t*y**2 + sp.sympify(1)\n",
-    "gammaDD[0][1] = sp.Rational(1,10) * sp.exp(-((x-b)**2 + (y-c)**2 + (z-d)**2))\n",
-    "gammaDD[0][2] = sp.Rational(1,10) * sp.exp(-((x-g)**2 + (y-h)**2 + (z-l)**2))\n",
-    "gammaDD[1][2] = sp.Rational(1,10) * sp.exp(-((x-n)**2 + (y-o)**2 + (z-p)**2))\n",
+    "gammaDD[0][0] = sp.sympify(1)#a*x**3 + b*y**3 + c*z**3 + d*y**2 + e*z**2 + sp.sympify(1)\n",
+    "gammaDD[1][1] = sp.sympify(1)#g*x**3 + h*y**3 + l*z**3 + m*x**2 + n*z**2 + sp.sympify(1)\n",
+    "gammaDD[2][2] = sp.sympify(1)#p*x**3 + q*y**3 + r*z**3 + s*x**2 + t*y**2 + sp.sympify(1)\n",
+    "gammaDD[0][1] = sp.sympify(0)#sp.Rational(1,10) * sp.exp(-((x-b)**2 + (y-c)**2 + (z-d)**2))\n",
+    "gammaDD[0][2] = sp.sympify(0)#sp.Rational(1,10) * sp.exp(-((x-g)**2 + (y-h)**2 + (z-l)**2))\n",
+    "gammaDD[1][2] = sp.sympify(0)#sp.Rational(1,10) * sp.exp(-((x-n)**2 + (y-o)**2 + (z-p)**2))\n",
     "\n",
-    "betaU[0] = (sp.sympify(2)/M_PI) * sp.atan(a*x + b*y + c*z)\n",
-    "betaU[1] = (sp.sympify(2)/M_PI) * sp.atan(b*x + c*y + a*z)\n",
-    "betaU[2] = (sp.sympify(2)/M_PI) * sp.atan(c*x + a*y + b*z)\n",
+    "betaU[0] = sp.sympify(0)#(sp.sympify(2)/M_PI) * sp.atan(a*x + b*y + c*z)\n",
+    "betaU[1] = sp.sympify(0)#(sp.sympify(2)/M_PI) * sp.atan(b*x + c*y + a*z)\n",
+    "betaU[2] = sp.sympify(0)#(sp.sympify(2)/M_PI) * sp.atan(c*x + a*y + b*z)\n",
     "\n",
-    "alpha = sp.sympify(1) - sp.sympify(1) / (sp.sympify(2) + x**2 + y**2 + z**2)\n",
+    "alpha = sp.sympify(1)#sp.sympify(1) - sp.sympify(1) / (sp.sympify(2) + x**2 + y**2 + z**2)\n",
     "\n",
-    "import GRHD.equations as gh\n",
-    "gh.compute_sqrtgammaDET(gammaDD)\n",
-    "\n",
-    "metric_gfs_to_print = [\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD00\"),rhs=gammaDD[0][0]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD01\"),rhs=gammaDD[0][1]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD02\"),rhs=gammaDD[0][2]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD11\"),rhs=gammaDD[1][1]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD12\"),rhs=gammaDD[1][2]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD22\"),rhs=gammaDD[2][2]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"betaU0\"),rhs=betaU[0]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"betaU1\"),rhs=betaU[1]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"betaU2\"),rhs=betaU[2]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"alpha\"),rhs=alpha),\\\n",
+    "metric_gfs_to_print = [\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD00\"),rhs=gammaDD[0][0]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD01\"),rhs=gammaDD[0][1]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD02\"),rhs=gammaDD[0][2]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD11\"),rhs=gammaDD[1][1]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD12\"),rhs=gammaDD[1][2]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"gammaDD22\"),rhs=gammaDD[2][2]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"betaU0\"),rhs=betaU[0]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"betaU1\"),rhs=betaU[1]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"betaU2\"),rhs=betaU[2]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"alpha\"),rhs=alpha),\n",
     "                      ]\n",
     "\n",
     "desc = \"Calculate the metric gridfunctions\"\n",
@@ -298,10 +293,10 @@
     }
    ],
    "source": [
-    "BU_to_print = [\\\n",
-    "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
-    "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2]),\\\n",
+    "BU_to_print = [\n",
+    "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\n",
+    "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\n",
+    "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2]),\n",
     "               ]\n",
     "\n",
     "desc = \"Calculate sample magnetic field data\"\n",
@@ -312,10 +307,10 @@
     "    body     = fin.FD_outputC(\"returnstring\",BU_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
     "    loopopts=\"AllPoints,Read_xxs\")\n",
     "\n",
-    "ValenciavU_to_print = [\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"ValenciavU0\"),rhs=ValenciavU[0]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"ValenciavU1\"),rhs=ValenciavU[1]),\\\n",
-    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"ValenciavU2\"),rhs=ValenciavU[2]),\\\n",
+    "ValenciavU_to_print = [\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"ValenciavU0\"),rhs=ValenciavU[0]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"ValenciavU1\"),rhs=ValenciavU[1]),\n",
+    "                       lhrh(lhs=gri.gfaccess(\"out_gfs\",\"ValenciavU2\"),rhs=ValenciavU[2]),\n",
     "                      ]\n",
     "\n",
     "desc = \"Calculate sample velocity data\"\n",
@@ -395,6 +390,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "subdir = \"PPM\"\n",
+    "cmd.mkdir(os.path.join(out_dir,subdir))\n",
     "import GiRaFFE_NRPy.GiRaFFE_NRPy_PPM as PPM\n",
     "PPM.GiRaFFE_NRPy_PPM(os.path.join(out_dir,subdir))"
    ]
@@ -471,14 +468,14 @@
     }
    ],
    "source": [
-    "# import GRHD.equations as GH\n",
-    "# GH.compute_sqrtgammaDET(gamma_faceDD)\n",
+    "import GRHD.equations as gh\n",
+    "gh.compute_sqrtgammaDET(gammaDD)\n",
     "LeviCivitaDDD = ixp.LeviCivitaTensorDDD_dim3_rank3(gh.sqrtgammaDET)\n",
     "\n",
     "driftvU = ixp.zerorank1()\n",
     "for i in range(3):\n",
     "    # TODO: don't use _face metric gridfunctions once we're in curved space!\n",
-    "    driftvU[i] = alpha_face*ValenciavU[i]-beta_faceU[i]\n",
+    "    driftvU[i] = alpha*ValenciavU[i]-betaU[i]\n",
     "\n",
     "A_rhsD = ixp.zerorank1()\n",
     "for i in range(3):\n",
@@ -486,10 +483,10 @@
     "        for k in range(3):\n",
     "            A_rhsD[i] += LeviCivitaDDD[i][j][k]*driftvU[j]*BU[k]\n",
     "\n",
-    "A_rhsD_to_print = [\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD0\"),rhs=A_rhsD[0]),\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD1\"),rhs=A_rhsD[1]),\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD2\"),rhs=A_rhsD[2]),\\\n",
+    "A_rhsD_to_print = [\n",
+    "                   lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD0\"),rhs=A_rhsD[0]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD1\"),rhs=A_rhsD[1]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"AD2\"),rhs=A_rhsD[2]),\n",
     "                  ]\n",
     "\n",
     "desc = \"Calculate analytic electric field, part of the right-hand side of AD\"\n",
@@ -651,8 +648,8 @@
     "const int VX=0,VY=1,VZ=2,BX=3,BY=4,BZ=5;\n",
     "const int NUM_RECONSTRUCT_GFS = 6;\n",
     "\n",
-    "#include \"Afield_flux/reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\"\n",
-    "#include \"Afield_flux/loop_defines_reconstruction_NRPy.h\"\n",
+    "#include \"PPM/reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\"\n",
+    "#include \"PPM/loop_defines_reconstruction_NRPy.h\"\n",
     "#include \"FCVAL/interpolate_metric_gfs_to_cell_faces.h\"\n",
     "\n",
     "#include \"calculate_metric_gfs.h\"\n",
@@ -713,20 +710,6 @@
     "    REAL *rhs_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS2 * Nxx_plus_2NGHOSTS1 * Nxx_plus_2NGHOSTS0);\n",
     "    REAL *rhs_exact_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * Nxx_plus_2NGHOSTS2 * Nxx_plus_2NGHOSTS1 * Nxx_plus_2NGHOSTS0);\n",
     "\n",
-    "    // Test metric for flat space:\n",
-    "    LOOP_REGION(0,Nxx_plus_2NGHOSTS2,0,Nxx_plus_2NGHOSTS1,0,Nxx_plus_2NGHOSTS0) {\n",
-    "        auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)] = 1.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(GAMMA_FACEDD01GF,i0,i1,i2)] = 0.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(GAMMA_FACEDD02GF,i0,i1,i2)] = 0.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(GAMMA_FACEDD11GF,i0,i1,i2)] = 1.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(GAMMA_FACEDD12GF,i0,i1,i2)] = 0.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(GAMMA_FACEDD22GF,i0,i1,i2)] = 1.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(BETA_FACEU0GF,i0,i1,i2)] = 0.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(BETA_FACEU1GF,i0,i1,i2)] = 0.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(BETA_FACEU2GF,i0,i1,i2)] = 0.0; // Flat Space\n",
-    "        auxevol_gfs[IDX4S(ALPHA_FACEGF,i0,i1,i2)] = 1.0; // Flat Space\n",
-    "    }\n",
-    "\n",
     "    a = (double)(rand()%20-10);\n",
     "    b = (double)(rand()%20-10);\n",
     "    c = (double)(rand()%20-10);\n",
@@ -747,7 +730,7 @@
     "    //printf(\"a,b,c,d,e,f = %f,%f,%f,%f,%f,%f\\n\",a,b,c,d,e,f);\n",
     "\n",
     "    // First, calculate the test metric on our grid:\n",
-    "    //calculate_metric_gfs(&params,xx,auxevol_gfs);\n",
+    "    calculate_metric_gfs(&params,xx,auxevol_gfs);\n",
     "\n",
     "    // Calculate the initial data and the exact solution.\n",
     "    calculate_BU(&params,xx,auxevol_gfs);\n",
@@ -864,12 +847,12 @@
     "    int i1 = Nxx_plus_2NGHOSTS1/2;\n",
     "    int i2 = Nxx_plus_2NGHOSTS2/2;\n",
     "\n",
-    "    /*printf(\"Numerical: %.15e\\n\",rhs_gfs[IDX4S(AD0GF,i0,i1,i2)]);\n",
+    "    printf(\"Numerical: %.15e\\n\",rhs_gfs[IDX4S(AD0GF,i0,i1,i2)]);\n",
     "    printf(\"Analytic:  %.15e\\n\",rhs_exact_gfs[IDX4S(AD0GF,i0,i1,i2)]);\n",
     "    printf(\"Numerical: %.15e\\n\",rhs_gfs[IDX4S(AD1GF,i0,i1,i2)]);\n",
     "    printf(\"Analytic:  %.15e\\n\",rhs_exact_gfs[IDX4S(AD1GF,i0,i1,i2)]);\n",
     "    printf(\"Numerical: %.15e\\n\",rhs_gfs[IDX4S(AD2GF,i0,i1,i2)]);\n",
-    "    printf(\"Analytic:  %.15e\\n\\n\",rhs_exact_gfs[IDX4S(AD2GF,i0,i1,i2)]);*/\n",
+    "    printf(\"Analytic:  %.15e\\n\\n\",rhs_exact_gfs[IDX4S(AD2GF,i0,i1,i2)]);\n",
     "\n",
     "    //printf(\"i0,i1,i2 = %d,%d,%d\\n\",i0,i1,i2);\n",
     "    fprintf(out2D,\"%.16e\\t%.16e\\t%.16e\\t %e %e %e\\n\",\n",
@@ -906,43 +889,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Now compiling, should take ~2 seconds...\n",
-      "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Afield_flux_unit_test.c -o Validation/Afield_flux_unit_test.exe -lm`...\n",
-      "(BENCH): Finished executing in 2.0360918045043945 seconds.\n",
+      "(BENCH): Finished executing in 1.8360190391540527 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 2.2881062030792236 seconds.\n",
-      "\n",
-      "\n",
-      "Now running...\n",
-      "\n",
       "(EXEC): Executing `cmd /c Validation\\Afield_flux_unit_test 2 2 2`...\n",
       "(BENCH): Finished executing in 0.23000049591064453 seconds.\n",
       "(EXEC): Executing `cmd /c Validation\\Afield_flux_unit_test 4 4 4`...\n",
-      "(BENCH): Finished executing in 0.23000049591064453 seconds.\n",
-      "Finished in 0.7400012016296387 seconds.\n",
-      "\n",
-      "\n"
+      "(BENCH): Finished executing in 0.24000120162963867 seconds.\n"
      ]
     }
    ],
    "source": [
-    "import time\n",
-    "\n",
-    "print(\"Now compiling, should take ~2 seconds...\\n\")\n",
-    "start = time.time()\n",
     "cmd.C_compile(os.path.join(out_dir,\"Afield_flux_unit_test.c\"), os.path.join(out_dir,\"Afield_flux_unit_test\"))\n",
-    "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
-    "print(\"Now running...\\n\")\n",
-    "start = time.time()\n",
     "cmd.Execute(os.path.join(\"Validation\",\"Afield_flux_unit_test\"),\"2 2 2\",\"out2.txt\")\n",
     "# To do a convergence test, we'll also need a second grid with twice the resolution.\n",
-    "cmd.Execute(os.path.join(\"Validation\",\"Afield_flux_unit_test\"),\"4 4 4\",\"out4.txt\")\n",
-    "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n"
+    "cmd.Execute(os.path.join(\"Validation\",\"Afield_flux_unit_test\"),\"4 4 4\",\"out4.txt\")"
    ]
   },
   {
@@ -966,18 +929,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The following quantities converge at the listed order (should be ~1 for Shock data, ~2 otherwise):\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-f2b211e5071b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"The following quantities converge at the listed order (should be ~1 for Shock data, ~2 otherwise):\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"A_rhsD0: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconv_order\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mData1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mData2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"A_rhsD1: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconv_order\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mData1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mData2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"A_rhsD2: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconv_order\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mData1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mData2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: too many indices for array"
+      "The following quantities converge at the listed order (should be ~1 for Shock data, ~2 otherwise):\n",
+      "A_rhsD0: 2.00058839136859\n",
+      "A_rhsD1: 1.9938716792745905\n",
+      "A_rhsD2: 1.9955444713514814\n"
      ]
     }
    ],
@@ -1021,9 +976,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux.tex, and\n",
+      "    compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
+      "    GiRaFFE_NRPy-Afield_flux.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Afield_flux\",location_of_template_file=os.path.join(\"..\"))"
